generate string + qr
